--- a/header.component.html
+++ b/header.component.html
@@ -5,6 +5,7 @@
       <a routerLink="/dashboard">Dashboard</a>
       <a routerLink="/category">Category</a>
       <a routerLink="/products">Products</a>
+    </div>
     <!-- <div class="collapse navbar-collapse"> -->
     <div class="nav navbar-nav navbar-left">
       <button class="openbtn" (click)="openNav()">☰</button>
@@ -20,7 +21,7 @@
           ></a>
           <ul class="dropdown-menu">
             <li><a routerLink="/login">Log in</a></li>
-            <li><a href="#">other</a></li>
+            <li><a href="#">Logout</a></li>
           </ul>
         </li>
       </ul>
