--- a/homepage.component.html
+++ b/homepage.component.html
@@ -1,139 +1,257 @@
-<!-- <div class="sidenav">
-  <li class="dropdown" appDropdown>
-    <a routerLink="/home" class="dropdown-toggle" role="button"
-      >Category<span class="caret"></span
-    ></a>
-    <ul class="dropdown-menu">
-      <li><a routerLink="/login">electronics</a></li>
-      <li><a href="#">Men's wear</a></li>
-    </ul>
-  </li>
-  <li class="dropdown" appDropdown>
-    <a routerLink="/home" class="dropdown-toggle" role="button"
-      >Brand<span class="caret"></span
-    ></a>
-    <ul class="dropdown-menu">
-      <li><a routerLink="/login">Log in</a></li>
-      <li><a href="#">other</a></li>
-    </ul>
-  </li>
-  <li class="dropdown" appDropdown>
-    <a routerLink="/home" class="dropdown-toggle" role="button"
-      >Product<span class="caret"></span
-    ></a>
-    <ul class="dropdown-menu">
-      <li><a routerLink="/login">Log in</a></li>
-      <li><a href="#">other</a></li>
-    </ul>
-  </li>
-</div> -->
 <mat-tab-group mat-align-tabs="start">
   <mat-tab label="Add category">
     <div class="container">
       <form action="/action_page.php">
         <div class="row">
           <div class="col-25">
-            <label for="fname">Category Name</label>
+            <label for="Category Name">Category Name</label>
           </div>
           <div class="col-75">
             <input
               type="text"
-              id="fname"
-              name="firstname"
+              id="categoryname"
+              name="categoryname"
+              [(ngModel)]="categoryNameData.categoryname"
               placeholder="category name.."
             />
           </div>
         </div>
 
         <div class="row">
-          <input type="submit" value="Submit" />
+          <input type="submit" (click)="addcategoryName()" value="Submit" />
         </div>
       </form>
     </div>
   </mat-tab>
+  <mat-tab label="View categories">
+    <div class="container">
+      <br /><br /><br />
+      <h1>Category List</h1>
+      <table class="table table-striped table-bordered">
+        <thead>
+          <tr>
+            <th>Id</th>
+            <th>Name</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let ct of cat; let index = index">
+            <td>{{ index + 1 }}</td>
+            <td>{{ ct.categoryname }}</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </mat-tab>
   <mat-tab label="Add Product">
     <div class="container">
-      <form action="/action_page.php">
-        <div class="row">
-          <div class="col-25">
-            <label for="productname">product Name</label>
+      <br /><br /><br />
+      <h1>Add Product</h1>
+
+      <div class="col-md-3"></div>
+
+      <div class="row">
+        <div class="col-md-3">
+          <div class="form-group">
+            <label for=""> Product Name</label>
+            <input [(ngModel)]="productname" type="text" class="form-control" />
           </div>
-          <div class="col-75">
+        </div>
+
+        <div class="col-md-3">
+          <div class="form-group">
+            <label for="">Product Price</label>
             <input
+              [(ngModel)]="productprice"
               type="text"
-              id="productname"
-              name="productname"
-              placeholder="Product name.."
+              class="form-control"
             />
           </div>
         </div>
+      </div>
 
-        <div class="row">
-          <div class="col-25">
-            <label for="productprice">Product price</label>
-          </div>
-          <div class="col-75">
+      <div class="col-md-3"></div>
+
+      <div class="row">
+        <div class="col-md-3">
+          <div class="form-group">
+            <label for="">Product Discount</label>
             <input
-              type="number"
-              id="productname"
-              name="productname"
-              placeholder="Product price.."
+              [(ngModel)]="productdiscount"
+              type="text"
+              class="form-control"
             />
           </div>
         </div>
 
-        <div class="row">
-          <div class="col-25">
-            <label for="category">Category</label>
+        <div class="col-md-3">
+          <div class="form-group">
+            <label for="">Price with Discount</label>
+            <input
+              [(ngModel)]="productpriceWithDiscount"
+              type="text"
+              class="form-control"
+            />
           </div>
-          <div class="col-75">
-            <select id="country" name="country">
-              <option value="australia">Electronics</option>
-              <option value="canada">Mens wear</option>
-              <option value="usa">Makeup</option>
+        </div>
+      </div>
+
+      <div class="col-md-3"></div>
+
+      <div class="row">
+        <div class="col-md-3">
+          <div class="form-group">
+            <label for="">Does in MG</label>
+            <input
+              [(ngModel)]="productdoseInMG"
+              type="text"
+              class="form-control"
+            />
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="form-group">
+            <label for="">MGF Date</label>
+            <input
+              [(ngModel)]="productmgfdate"
+              type="date"
+              class="form-control"
+            />
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3"></div>
+
+      <div class="row">
+        <div class="col-md-3">
+          <div class="form-group">
+            <label for="">Expire Date</label>
+            <input
+              [(ngModel)]="productexpiredate"
+              type="date"
+              class="form-control"
+            />
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="form-group">
+            <label for="">Add Image</label>
+            <input
+              (change)="onSelectImage($event)"
+              type="file"
+              class="form-control"
+            />
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3"></div>
+      <div class="row">
+        <div class="col-md-3">
+          <div class="form-group">
+            <label for="">Category</label>
+            <select [(ngModel)]="categoryid" class="form-control">
+              <option *ngFor="let c of cat" [value]="c.categoryid">{{
+                c.categoryname
+              }}</option>
             </select>
           </div>
         </div>
-        <div class="row">
-          <div class="col-25">
-            <label for="subject">Description</label>
-          </div>
-          <div class="col-75">
+      </div>
+
+      <div class="col-md-3"></div>
+      <div class="row">
+        <div class="col-md-3">
+          <div class="form-group">
+            <label for=""> Product Description</label>
             <textarea
-              id="subject"
-              name="subject"
-              placeholder="Write something about the product.."
-              style="height: 200px;"
+              [(ngModel)]="productdescription"
+              class="form-control"
+              rows="4"
             ></textarea>
           </div>
         </div>
-        <div class="row">
-          <input type="submit" value="Submit" />
+      </div>
+
+      <div class="col-md-3"></div>
+      <div class="row">
+        <div class="col-md-3">
+          <button (click)="addProduct()" class="btn btn-success">Add</button>
         </div>
-      </form></div
-  ></mat-tab>
+      </div>
+    </div></mat-tab
+  >
   <mat-tab label="View Products">
-    <mat-card class="example-card">
-      <mat-card-header>
-        <div mat-card-avatar class="example-header-image"></div>
-        <mat-card-title>Shiba Inu</mat-card-title>
-        <mat-card-subtitle>Dog Breed</mat-card-subtitle>
-      </mat-card-header>
+    <div class="container">
+      <!-- <br /><br /><br />
+
+      <h1>Product List</h1>
+      <table class="table table-striped table-bordered">
+        <thead>
+          <tr>
+            <th>Id</th>
+            <th>Image</th>
+            <th>Name</th>
+            <th>price</th>
+            <th>discount</th>
+            <th>priceWithDiscount</th>
+            <th>DoesInMG</th>
+            <th>MgfDate</th>
+            <th>Expiredate</th>
+            <th>Description</th>
+            <th>Action</th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <tr *ngFor="let pr of products; let index = index">
+            <td>{{ index + 1 }}</td>
+            <td>
+              <img
+                class="thumbnail"
+                src="http://localhost:4000/{{ pr.image }}"
+                alt=""
+              />
+            </td>
+            <td>{{ pr.name }}</td>
+            <td>{{ pr.price }}</td>
+            <td>{{ pr.discount }}</td>
+            <td>{{ pr.priceWithDiscount }}</td>
+            <td>{{ pr.doseInMG }}</td>
+            <td>{{ pr.mgfdate }}</td>
+            <td>{{ pr.expiredate }}</td>
+            <td>{{ pr.description }}</td>
+            <td>
+              <button (click)="ondelete(pr.id)" class="btn btn-danger">
+                <i class="glyphicon glyphicon-trash"></i>
+              </button>
+              <button
+                (click)="onSelect(pr.id)"
+                class="btn btn-warning"
+                style="margin-left: 10px;"
+              >
+                <i class="glyphicon glyphicon-pencil"></i>
+              </button>
+            </td>
+          </tr>
+        </tbody>
+      </table> -->
+    </div>
+  </mat-tab>
+  <mat-tab label="Admin Profile">
+    <div class="card">
       <img
-        mat-card-image
-        src="https://material.angular.io/assets/img/examples/shiba2.jpg"
-        alt="Photo of a Shiba Inu"
+        src="https://cdn3.iconfinder.com/data/icons/avatars-round-flat/33/avat-01-512.png"
+        alt="John"
+        style="width: 100%;"
       />
-      <mat-card-content>
-        <p>
-          The Shiba Inu is the smallest of the six original and distinct spitz
-          breeds of dog from Japan. A small, agile dog that copes very well with
-          mountainous terrain, the Shiba Inu was originally bred for hunting.
-        </p>
-      </mat-card-content>
-      <mat-card-actions>
-        <button mat-button>Buy</button>
-       
-      </mat-card-actions> </mat-card
-  ></mat-tab>
+      <h1>John Doe</h1>
+      <p class="title">Hello Admin</p>
+
+      <p><button (click)="logoutUser()">Log Out</button></p>
+    </div>
+  </mat-tab>
 </mat-tab-group>
