--- a/homepage.component.html
+++ b/homepage.component.html
@@ -1,7 +1,7 @@
 <mat-tab-group mat-align-tabs="start">
   <mat-tab label="Add category">
     <div class="container">
-      <form action="/action_page.php">
+      <form >
         <div class="row">
           <div class="col-25">
             <label for="Category Name">Category Name</label>
@@ -154,7 +154,7 @@
           <div class="form-group">
             <label for="">Category</label>
             <select [(ngModel)]="categoryid" class="form-control">
-              <option *ngFor="let c of cat" [value]="c.categoryid">{{
+              <option *ngFor="let c of cat" [value]="c._id">{{
                 c.categoryname
               }}</option>
             </select>
@@ -186,21 +186,20 @@
   >
   <mat-tab label="View Products">
     <div class="container">
-      <!-- <br /><br /><br />
+      <br /><br /><br />
 
       <h1>Product List</h1>
       <table class="table table-striped table-bordered">
         <thead>
           <tr>
             <th>Id</th>
-            <th>Image</th>
+
             <th>Name</th>
             <th>price</th>
             <th>discount</th>
-            <th>priceWithDiscount</th>
-            <th>DoesInMG</th>
-            <th>MgfDate</th>
-            <th>Expiredate</th>
+
+            <!-- <th>MgfDate</th>
+            <th>Expiredate</th> -->
             <th>Description</th>
             <th>Action</th>
           </tr>
@@ -209,36 +208,154 @@
         <tbody>
           <tr *ngFor="let pr of products; let index = index">
             <td>{{ index + 1 }}</td>
-            <td>
+            <!-- <td>
               <img
                 class="thumbnail"
-                src="http://localhost:4000/{{ pr.image }}"
+                src="http://localhost:5000/api/upload{{ pr.productimage }}"
                 alt=""
               />
-            </td>
-            <td>{{ pr.name }}</td>
-            <td>{{ pr.price }}</td>
-            <td>{{ pr.discount }}</td>
-            <td>{{ pr.priceWithDiscount }}</td>
-            <td>{{ pr.doseInMG }}</td>
-            <td>{{ pr.mgfdate }}</td>
-            <td>{{ pr.expiredate }}</td>
-            <td>{{ pr.description }}</td>
+            </td> -->
+            <td>{{ pr.productname }}</td>
+            <td>{{ pr.productprice }}</td>
+            <td>{{ pr.productdiscount }}</td>
+
+            <!-- <td>{{ pr.productmgfdate }}</td>
+             <td>{{ pr.productexpiredate }}</td> -->
+            <td>{{ pr.productdescription }}</td>
             <td>
               <button (click)="ondelete(pr.id)" class="btn btn-danger">
                 <i class="glyphicon glyphicon-trash"></i>
               </button>
-              <button
-                (click)="onSelect(pr.id)"
-                class="btn btn-warning"
-                style="margin-left: 10px;"
-              >
-                <i class="glyphicon glyphicon-pencil"></i>
-              </button>
             </td>
           </tr>
         </tbody>
-      </table> -->
+      </table>
+    </div>
+  </mat-tab>
+  <mat-tab label="Edit Product">
+    <div class="container">
+      <div class="col-md-3"></div>
+
+      <div class="row">
+        <div class="col-md-3">
+          <div class="form-group">
+            <label for="">Name</label>
+            <input [(ngModel)]="productname" type="text" class="form-control" />
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="form-group">
+            <label for="">Price</label>
+            <input
+              [(ngModel)]="productprice"
+              type="text"
+              class="form-control"
+            />
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3"></div>
+
+      <div class="row">
+        <div class="col-md-3">
+          <div class="form-group">
+            <label for="">Discount</label>
+            <input
+              [(ngModel)]="productdiscount"
+              type="text"
+              class="form-control"
+            />
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="form-group">
+            <label for="">Price with Discount</label>
+            <input
+              [(ngModel)]="productpriceWithDiscount"
+              type="text"
+              class="form-control"
+            />
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3"></div>
+
+      <div class="row">
+        <div class="col-md-3">
+          <div class="form-group">
+            <label for="">Does in MG</label>
+            <input
+              [(ngModel)]="productdoseInMG"
+              type="text"
+              class="form-control"
+            />
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="form-group">
+            <label for="">MGF Date</label>
+            <input
+              [(ngModel)]="productmgfdate"
+              type="date"
+              class="form-control"
+            />
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3"></div>
+
+      <div class="row">
+        <div class="col-md-3">
+          <div class="form-group">
+            <label for="">Expire Date</label>
+            <input
+              [(ngModel)]="productexpiredate"
+              type="date"
+              class="form-control"
+            />
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="form-group">
+            <label for="">Category</label>
+            <select [(ngModel)]="categoryid" class="form-control">
+              <option *ngFor="let c of cat" [value]="c.id">{{
+                c.title
+              }}</option>
+            </select>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3"></div>
+      <div class="row">
+        <div class="col-md-3">
+          <div class="form-group">
+            <label for="">Description</label>
+            <textarea
+              [(ngModel)]="productdescription"
+              rows="4"
+              class="form-control"
+            ></textarea>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3"></div>
+
+      <div class="row">
+        <div class="col-md-3">
+          <button (click)="onUpdate()" class="btn btn-success">Update</button>
+       
+        </div>
+      </div>
     </div>
   </mat-tab>
   <mat-tab label="Admin Profile">
@@ -248,7 +365,8 @@
         alt="John"
         style="width: 100%;"
       />
-      <h1>John Doe</h1>
+      <!-- <div *ngFor="let name of userdetails></div> -->
+
       <p class="title">Hello Admin</p>
 
       <p><button (click)="logoutUser()">Log Out</button></p>
